; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_celleb_scc_pciex.c_scc_pciex_memcpy_fromio.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/extr_celleb_scc_pciex.c_scc_pciex_memcpy_fromio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i64)* @scc_pciex_memcpy_fromio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scc_pciex_memcpy_fromio(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @__do_memcpy_fromio(i8* %7, i32 %8, i64 %9)
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @iowa_mem_find_bus(i32 %11)
  %13 = call i32 @scc_pciex_io_flush(i32 %12)
  ret void
}

declare dso_local i32 @__do_memcpy_fromio(i8*, i32, i64) #1

declare dso_local i32 @scc_pciex_io_flush(i32) #1

declare dso_local i32 @iowa_mem_find_bus(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
